# hello-gwasm-runner

./: Cargo.toml  README.md
.cargo/: config
src/: main.rs
