[package]
name = "hello_world"
version = "0.1.0"
authors = ["Jakub Konka <jakub.konka@golem.network>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gwasm-api = { git="https://github.com/golemfactory/gwasm-runner.git" }
failure = "0.1.5"
